# computer-graphics

./: .gitattributes  README.md
assignment1/: .gitignore  CMakeLists.txt  README.txt  logfile.txt  vcpkg.json
assignment1/shared_sources/: ImplementGlad.cpp  ShaderProgram.cpp  ShaderProgram.h  Timer.cpp  Utils.h  imgui_impl_opengl3.cpp
assignment1/shared_sources/glad/: gl.h
assignment1/src/: App.cpp  App.h  main.cpp
assignment2/: CMakeLists.txt  README.txt
assignment2/assets/swp/: core.swp
assignment2/shared_sources/: Timer.cpp  Utils.h  im3d_opengl33.cpp
assignment2/src/: app.cpp  app.h  camera.cpp  camera.h  curve.cpp  curve.h  parse.cpp  parse.h  subdiv.cpp  subdiv.h
assignment3/: CMakeLists.txt  README.txt  vcpkg.json
assignment3/assets/characters/: mocapguy.bvh
assignment3/shared_sources/: ShaderProgram.cpp  Utils.cpp
assignment3/shared_sources/glad/: gl_core_33.c  gl_core_33.h
assignment3/src/: app.cpp  app.h  main.cpp  skeleton.cpp  skeleton.h
assignment4/: .gitignore  CMakeLists.txt  CMakePresets.json  README.txt  sprinkler.cpp  sprinkler.h  vcpkg.json
assignment4/shared_sources/: ShaderProgram.h  Timer.h  Utils.h  im3d_opengl33.cpp
assignment4/src/: app.cpp  app.h  integrators.cpp  integrators.h  particle_system.cpp  particle_system.h
assignment5/: CMakeLists.txt  README.txt  render_all.bat  render_options.bat  set_renderer_debug.bat  set_renderer_reference.bat  set_renderer_release.bat  vcpkg.json
assignment5/shared_sources/: imgui_impl_opengl3.cpp
assignment5/src/: app.cpp  app.h  args.cpp  args.h  camera.h  film.h  filter.cpp  filter.h  hit.h  image.h  light.cpp  light.h  main.cpp  material.cpp  material.h  object.cpp  object.h  preview_render.cpp  ray.h  ray_tracer.cpp  ray_tracer.h  sampler.cpp  sampler.h  scene_parser.cpp  scene_parser.h  vec_utils.h
assignment6/: CMakeLists.txt  README.txt  vcpkg.json
assignment6/assets/meshes/head/: head.txt
assignment6/shaders/: pixel_shader.glsl
assignment6/shared_sources/: ShaderProgram.cpp  ShaderProgram.h  Utils.cpp  Utils.h  im3d_opengl33.cpp  image.h
assignment6/src/: app.cpp  app.h  camera.cpp  camera.h  main.cpp  shadowmap.cpp  shadowmap.h
